# DeployBot

./: .gitignore  README.md  deploybot  deploybot-tui  pyproject.toml
deploybot_pkg/: __init__.py  apps.py  cli.py  commands.py  deploy.py  deployments.py  discovery.py  packages.py  remote.py  startup.py  tui.py
tests/gherkin/: run_features.py
tests/gherkin/features/: deploy.feature  discover.feature  help.feature  list_apps.feature  list_deployments.feature  list_packages.feature  package.feature  remote.feature  running.feature  services.feature  start_custom.feature  start_stop.feature  startup_points.feature  tui.feature  tunnels.feature
tests/gherkin/fixtures/: fake_deploy_executor.py  fake_remote_executor.py  known_hosts
tests/gherkin/fixtures/app_search_root/sibling-python-app/: pyproject.toml
tests/gherkin/fixtures/app_search_root/tools/nested-npm-app/: build.js
tests/gherkin/fixtures/app_search_root/tools/not-an-app/: README.md
tests/gherkin/fixtures/package_dist/nested-npm-app-1.2.3/: deploybot-manifest.json  ws-server.js
tests/gherkin/fixtures/package_dist/nested-npm-app-1.2.4/: deploybot-manifest.json
tests/gherkin/fixtures/remote_servers/localhost/users/nested-npm-app/ROOT_DEPLOYBOT/.deploybot-runtime/: nested-npm-app-1.2.3.json
tests/gherkin/fixtures/remote_servers/localhost/users/nested-npm-app/ROOT_DEPLOYBOT/nested-npm-app-1.2.3/: .owner  INSTALL_LOG.txt  deploybot-manifest.json  package.json
